--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,32 @@
-BadmainZorigto
+# Built application files
+*.apk
+*.ap_
+*.aab
 
+# Local configuration file (sdk path, etc)
+local.properties
 
+# Gradle files
+.gradle/
+
+# User-specific configurations
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+
+# OS-specific files
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Version control
+vcs.xml
+
+# lint
+lint/intermediates/
+lint/generated/
+lint/outputs/
+lint/tmp/
+lint/reports/
