--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,40 @@
-BadmainZorigto
+# Built application files
+build/
 
+# Files for the ART/Dalvik VM
+*.dex
 
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
+# External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
-.cxx
+
+# Gradle files
+.gradle/
+
+# Signing files
+.signing/
+
+# User-specific configurations
+*.iml
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log Files
+*.log
+
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+# Keystore files
+# Uncomment the following lines if you do not want to check your keystore files in.
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Version control
+vcs.xml
